# HexaViewer

./: .gitignore  CMakeLists.txt  main
include/: FileReader.hpp  hexaviewer.hpp  hexaviewer_fast.hpp
src/: FileReader.cpp  main.cpp  test.cpp  test_comp.cpp
testBinary/: tt.txt
